security: add CSRF tokens to student forms
- Add CSRF token to profile update form
- Add CSRF token to code submission form

--- a/src/web/templates/submit_code.html
+++ b/src/web/templates/submit_code.html
@@ -57,6 +57,7 @@
             <div class="editor-body">
                 <form method="POST" action="{{ url_for('student.submit_code', assignment_id=assignment.id) }}"
                     novalidate id="codeForm">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
 
                     <!-- Language & Options Bar -->
                     <div class="editor-toolbar">
