--- a/src/web/templates/profile.html
+++ b/src/web/templates/profile.html
@@ -35,6 +35,7 @@
             </div>
             <div class="card-body">
                 <form method="POST" action="{{ url_for('student.update_profile') }}" novalidate>
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
 
                     <div class="row">
                         <div class="col-md-6 mb-3">
